# buc_Capstone_DEMO

./: .cursorrules  .gitignore  GOODPARTNER.md  PROJECT_HANDOVER_KR.md  README.md  full_diff.txt
ai-interview/: .env.example  README.md  interview-logic.ts  pyproject.toml  render.yaml  requirements.txt
ai-interview/app/: __init__.py  config.py  main.py
ai-interview/app/api/: admin.py  interview.py  resume.py  ws.py
ai-interview/app/db/: database.py
ai-interview/app/interview/: __init__.py
ai-interview/app/interview/domain/: __init__.py  interview_level.py  interview_memory.py  pacing.py  question_bank.py  turn_policy.py  turn_text.py
ai-interview/app/interview/reporting/: __init__.py  agent.py  document.py  repository.py
ai-interview/app/interview/runtime/: __init__.py  client_session.py  delivery.py  executor.py  lifecycle.py  live_client.py  live_turns.py  message_router.py  orchestration.py  prepared_opening.py  prepared_opening_store.py  service_adapter.py  session_engine.py  session_interaction.py  (+10 more)
ai-interview/app/schemas/: __init__.py  interview.py  resume.py
ai-interview/app/services/: gemini_live_voice_service.py  google_cloud_tts_service.py  interview_service.py  llm_gemini.py  report_agent.py  stt_service.py  tts_service.py  voice_pipeline.py
ai-interview/dibut_ai_interview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-interview/tests/: test_gemini_live_voice_service.py  test_hybrid_question_flow.py  test_interview_backend.py  test_live_client.py  test_report_agent.py  test_stt_service.py  test_turn_text.py  test_voice_runtime.py
(+804 files in other folders)
