[project]
name = "dibut-ai-interview"
version = "0.1.0"
description = "FastAPI interview backend for Dibut"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "openai>=1.63.0",
  "beautifulsoup4>=4.12.3",
  "python-multipart>=0.0.9",
  "google-generativeai>=0.8.3",
  "google-genai>=1.7.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.1.0"
]

[tool.uv]
package = true
